{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Terrain",
            "id": "c75dc0da-a69d-4053-8029-2b2d9bc18afb",
            "actions": [
                {
                    "name": "MouseDown",
                    "type": "Button",
                    "id": "6ce9c10d-1884-4523-b401-f560300f5311",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "f5fbc0ed-f690-40a1-9c00-b730f2a66917",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "3737b490-8e80-44c8-9a1d-53a44754205e",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7d8365e8-ee53-4012-a728-19ce9f6999bc",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}